lang/interpret_test/TestAstFunc2/res1.txtar
-- main.mcl --
test "t1" {
	stringptr => 42, # int, not str
}
-- OUTPUT --
# err: errUnify: type unification error here: in /main.mcl @2:2-2:17
--
	stringptr => 42, # int, not str
	^^^^^^^^^^^^^^^^

ERROR: type error: str != int
